# xfce4-clipman-plugin

./: .clang-format  .cppcheck-false-positives  .gcc-analyzer-false-positives  .gitignore  .gitmodules  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  README_secure_item_dbus.md  THANKS  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.ac.in  configure.in.in  install_gdbserver.sh  intltool-update  meson.build  meson_options.txt  module.xml  pass_clip.sh  xfce4-clipman-history.sh  xfce4-clipman-plugin.desktop.in
clipboard-manager/: Makefile.am  clipboard-manager-wayland.c  clipboard-manager-wayland.h  clipboard-manager-x11.c  clipboard-manager-x11.h  clipboard-manager.c  clipboard-manager.h  daemon.h  meson.build
contrib/: README.md  bash_completion_pass_clip.sh  pass_clip.sh  remove_fancy_utf-8_char.py  rofi_menu.sh  transform_clipboard.py
daemon/: Makefile.am  daemon.h  gsd-clipboard-manager.c
data/: Makefile.am  meson.build
data/appdata/: .gitignore  Makefile.am  meson.build  xfce4-clipman.appdata.xml.in
data/icons/: Makefile.am  meson.build
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/64x64/: Makefile.am
data/icons/scalable/: Makefile.am
data/its/: Makefile.am
docs/: Makefile.am
docs/manual/: Makefile.am
docs/manual/C/: Makefile.am  xfce4-clipman-plugin.html  xfce4-clipman-plugin.xml.in
docs/manual/C/html/: index.html
docs/manual/C/images/: Makefile.am
docs/manual/da/: Makefile.am  xfce4-clipman-plugin.html  xfce4-clipman-plugin.xml.in
docs/manual/da/images/: Makefile.am
docs/manual/fr/: Makefile.am  xfce4-clipman-plugin.html  xfce4-clipman-plugin.xml.in
docs/manual/fr/images/: Makefile.am
docs/manual/gl/: Makefile.am  xfce4-clipman-plugin.html  xfce4-clipman-plugin.xml.in
docs/manual/gl/images/: Makefile.am
docs/manual/it/: Makefile.am  xfce4-clipman-plugin.html  xfce4-clipman-plugin.xml.in
docs/manual/it/images/: Makefile.am
docs/manual/ja/: Makefile.am  xfce4-clipman-plugin.html  xfce4-clipman-plugin.xml.in
docs/manual/ja/images/: Makefile.am
docs/manual/zh_CN/: Makefile.am  xfce4-clipman-plugin.html  xfce4-clipman-plugin.xml.in
docs/manual/zh_CN/images/: Makefile.am
icons/: Makefile.am
panel-plugin/: .gitignore  Makefile.am  Makefile.in  actions.c  actions.h  append_new_item.sh  clipman-cli.c  clipman-dialogs.c  clipman-dialogs.gresource.xml  clipman-dialogs.h  clipman.c  clipman.desktop.in.in  clipman.h  clipman_cli.sh  clipman_history_get_value.sh  collect_secure_item_and_notify.sh  collector.c  collector.h  common.c  common.h  dbus-clipman-service.c  dbus-clipman-service.h  demo.sh  history.c  history.h  main-panel-plugin.c  main-status-icon.c  main.c  menu.c  menu.h  meson.build  panel-plugin.c  plugin.c  plugin.h  read_dbus_history.sh  rofi_menu.sh  secure_text.c  secure_text.h  settings-dialog.glade  settings-dialog.ui  (+13 more)
po/: .gitignore  ChangeLog  LINGUAS  Makefile  Makefile.in  Makefile.in.in  Makevars  POTFILES  POTFILES.in  POTFILES.skip  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  (+31 more)
po-doc/: ChangeLog  LINGUAS  Makefile.am  ca.po  da.po  el.po  fr.po  gl.po  it.po  ja.po  pt.po  ru.po  tr.po  ug.po  uk.po  xfce4-clipman-plugin.pot  zh_CN.po
protocols/: Makefile.am  meson.build
tests/: Makefile.am  meson.build  test_actions.c  test_daemon.c  test_targets.c  test_xfakekey.c
x11-clipboard-manager/: Makefile.am  daemon.h  gsd-clipboard-manager.c
